--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,17 @@ edition = "2024"
 
 [dependencies]
 quarkstrom = { path="./quarkstrom" }
-fastrand = "2.3.0"
-once_cell = "1.21.3"
+
+# Graphics
+winit = "0.30.12"
+winit_input_helper = "0.17.0"
+
+# Gui
 egui = "0.33.0"
+
+# Math
 ultraviolet = "0.10.0"
+fastrand = "2.3.0"
+
+# Other
+once_cell = "1.21.3"
