--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ fastrand = "2.3.0"
 
 # Other
 once_cell = "1.21.3"
+tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
